cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set (CMAKE_CXX_FLAGS "-O2")
project(ants)
add_executable(ants main.cpp antSimulator.cpp)
find_package(SFML COMPONENTS window graphics system REQUIRED)
target_link_libraries(ants PUBLIC sfml-graphics)